@@ -2,6 +2,7 @@
 v4.2.6-git
 ----------
 
+[jan] Don't try to load Content application if tags are disabled.
 [mjr] Fix adding tags to new contacts (Bug #13884).
 [jan] Fix waiting for replication on LDAP backend.
 
